# turtlebot_explorer

./: .gitignore  .travis.yml  CMakeLists.txt  Doxygen  README.md  package.xml
config/: global_costmap_params.yaml
docs/html/: dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html
docs/html/d0/d27/: navigator_8cpp.html
docs/html/d1/dfb/: test__navigator_8cpp.html
docs/html/d4/db8/: explorer_8cpp.html
docs/html/d7/d56/: wavefront__detection_8cpp.html
docs/html/d9/dad/: test__wavefront_8cpp.html
docs/html/dd/dea/: test__explorer_8cpp.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  defines_1.js  defines_2.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  search.js  variables_0.js
docs/latex/: dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex
docs/latex/d0/d27/: navigator_8cpp.tex
docs/latex/d1/dfb/: test__navigator_8cpp.tex
docs/latex/d4/db8/: explorer_8cpp.tex
docs/latex/d7/d56/: wavefront__detection_8cpp.tex
docs/latex/d9/dad/: test__wavefront_8cpp.tex
docs/latex/dd/dea/: test__explorer_8cpp.tex
include/turtlebot_explorer/: explorer.hpp  navigator.hpp  wavefront_detection.hpp
launch/: demo.launch  gazebo.launch  launch.launch
results/: cppcheck.txt  cpplint.txt
src/: explorer.cpp  explorer.hpp  main.cpp  navigator.cpp  navigator.hpp  wavefront_detection.cpp  wavefront_detection.hpp
test/: test_explorer.cpp  test_explorer.launch  test_navigator.cpp  test_navigator.launch  test_wavefront.cpp  test_wavefront.launch
world/: swarmlab.world
